--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "argon2": "^0.31.2",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "minio": "^7.1.3",
     "mongoose": "^8.0.1",
     "passport": "^0.6.0",
@@ -41,6 +42,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
