--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@fontsource-variable/montserrat": "^5.0.17",
+    "axios": "^1.6.3",
     "framer-motion": "^10.16.5",
+    "jotai": "^2.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.19.0",
     "usehooks-ts": "^2.9.1",
     "vite-plugin-svgr": "^4.2.0"
