--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "cookie-parser": "^1.4.6",
     "minio": "^7.1.3",
     "mongoose": "^8.0.1",
+    "nestjs-minio": "^2.5.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
