--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "argon2": "^0.31.2",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "file-type": "^18.7.0",
     "minio": "^7.1.3",
     "mongoose": "^8.0.1",
     "nestjs-minio": "^2.5.4",
