--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource-variable/montserrat": "^5.0.17",
     "axios": "^1.6.3",
+    "date-fns": "^3.0.6",
     "framer-motion": "^10.16.5",
     "jotai": "^2.6.1",
     "react": "^18.2.0",
